--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=eForm
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC-3
+APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
 APP_LOCALE=pt_BR
