--- a/.env.example
+++ b/.env.example
@@ -22,8 +22,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=dbeform
-DB_USERNAME=eform
+DB_DATABASE=laravel
+DB_USERNAME=sail
 DB_PASSWORD=password
 
 SESSION_DRIVER=database
